# pypdf2txt

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  renovate.json
.github/workflows/: release.yml
docker/: Dockerfile  docker-entrypoint.sh
