[tool.poetry]
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
description = "A simple Python web service that allows you to convert your PDF documents to text."
license = "MIT"
name = "pypdf2txt"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
pdfminer-six = "^20221105"
python = "^3.10"
pywebio = "^1.8.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pre-commit = "^3.3.3"
python-semantic-release = "^8.0.0"
ruff = "^0.0.278"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
line-length = 180

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = true
version_variable = [
  "pyproject.toml:version",
]
