[tool.poetry]
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
description = "A simple Python web service that allows you to convert your PDF documents to text."
license = "MIT"
name = "pypdf2txt"
packages = [
  {include = "main.py"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pdfminer-six = "20221105"
python = "3.12.2"
pywebio = "1.8.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.1.0"
pre-commit = "3.7.0"
python-semantic-release = "8.7.0"
ruff = "0.3.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
line-length = 180

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = true
version_variable = [
  "pyproject.toml:version",
]
